# SunSCC

./: .gitignore  README.md  outputs  pyproject.toml
notebooks/: FullPipeline.ipynb  bioblue2sunscc.ipynb
notebooks/Classification/: Classification_GenerateClassifDataset-FINAL_new_Method.ipynb  Generate_all_sunMasks.ipynb  (+5 more)
noteboooks/: FullPipeline.ipynb
scripts/: Segmentation_slurm_launcher.sh  TrainP2_P3.py  TrainP2_P3.sh  TrainP2_P3_launcher.sh  classif_Evaluate_run.py  classif_Evaluate_run.sh  classif_Evaluate_run_launcher.sh  classif_TrainP1.sh  classif_TrainP1_launcher.sh  classif_TrainP2_P3.py  classif_TrainP2_P3.sh  classif_TrainP2_P3_launcher.sh  clustering_compute_huge_dicts.sh  clustering_compute_huge_dicts_launcher.sh  clustering_compute_image_outdicts.sh  clustering_compute_image_outdicts_launcher.sh  compute_huge_dicts.sh  compute_huge_dicts_launcher.sh  compute_image_outdicts.sh  compute_image_outdicts_launcher.sh  exp_multiple_thresholds_fgbg.sh  exp_single_threshold_fgbg.sh  no_cascade.sh  no_cascade_launcher.sh  no_cascade_launcher2.sh  no_cascade_launcher2_Rebuttal_DataAugFreq.sh  segmentation_exp_multiple_thresholds_fgbg.sh  segmentation_exp_single_threshold_fgbg.sh
sunscc/: __init__.py  train.py
utilities/: Class2Bbox.py  MeanShift.py  Otsu_Local_utilities.py  Otsu_local_script.py  clustering_compute_huge_dict.py  clustering_compute_image_outdict.py  clustering_utilities.py  compute_huge_dict.py  compute_image_outdict.py  create_detection_masks.py  matching_utilities.py  parallelized_script.py  tracking_utilities.py  transform_utilities.py
(+111 files in other folders)
